--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "good": "^7.1.0",
     "good-console": "^6.2.0",
     "good-squeeze": "^5.0.1",
-    "hapi": "^16.1.0"
+    "handlebars": "^4.0.6",
+    "hapi": "^16.1.0",
+    "inert": "^4.1.0",
+    "time-ago": "^0.1.0",
+    "vision": "^4.1.1"
   }
 }
