--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "good-squeeze": "^5.0.1",
     "handlebars": "^4.0.6",
     "hapi": "^16.1.0",
+    "hapi-auth-cookie": "^6.1.1",
     "inert": "^4.1.0",
     "time-ago": "^0.1.0",
-    "vision": "^4.1.1"
+    "vision": "^4.1.1",
+    "wreck": "^10.0.0"
   }
 }
