Adds client validation and renders errors

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "hapi": "^16.1.0",
     "hapi-auth-cookie": "^6.1.1",
     "inert": "^4.1.0",
+    "joi": "^10.2.1",
     "time-ago": "^0.1.0",
     "vision": "^4.1.1",
     "wreck": "^10.0.0"
